Add user registration, email confirmation and login

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DESKTOP-UCAC4K4\\SQLEXPRESS;Initial Catalog=Courses; Integrated Security=true;TrustServerCertificate=True;"
   },
+  "Jwt": {
+    "Secret": "fc691879-e2fb-46da-b37a-742f9fe9f58e",
+    "Audience": "https://localhost:7299/",
+    "Issuer": "https://localhost:7299/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
